--- a/Master Thesis/diplomski.tex
+++ b/Master Thesis/diplomski.tex
@@ -70,6 +70,8 @@ Traditionally, the focus of \textit{de novo} genome assembly has always been on 
 
 We will try to do this using novel algorithms from the field of \textit{deep learning} (DL), which is itself a subfield of \textit{machine learning} (ML). Bioinformatics has long been dominated by algorithms that employ complex heuristics and expert knowledge to find solutions to the problems researchers face \cite{compeau_pevzner_2015}. This is however slowly changing. More and more research is being done using ML to solve problems in bioinformatics, foregoing the laborious process of feature engineering and extensive human intervention. First, ML was employed only for finding dense and abstract representations of genome features, but it later started to completely replace the previously mentioned algorithms. It has since contributed tremendously to the field and shows no signs of stopping, the most notable achievement being the solution to the protein folding problem which previously wasn't solvable for 50 years \cite{alphafold}. Still, there remains a long way to go before ML, and to an extent, DL, becomes completely standard within the field. Thus, this thesis is concerned with applying recent DL techniques in order to solve the problem of separating haplotypes in genomes. This could not only potentially improve existing solutions to the problem at hand and reduce the necessity for human expert intervention, but also bring bioinformatics to a wider range of people who may not necessarily have a deep understanding of genetics \cite{dl_bioinformatics}.
 
+In this chapter, we will first give a brief introduction to bioinformatics, the task at hand, and deep learning. In Chapter \ref{ch:dataset}, we will explain our dataset and its creation in detail. Then, in Chapter \ref{ch:implementation}, we will go over all the software and methods we used to achieve our goals, as well as describe our code and model in more detail. Next, in Chapter \ref{ch:results}, we will list and describe all the important results obtained during experimenting and try to explain our findings. Finally, in Chapter \ref{ch:conclusion}, we will summarize our work an results and give ideas for future work.
+
 \section{Bioinformatics}
 
 Bioinformatics is an interdisciplinary field of research that has had a tremendous impact on humanity in the last few decades. Since the completion of the Human Genome Project \cite{HGP1} \cite{HGP2}, the cost of sequencing a human genome has fallen exponentially. We can now reliably sequence a human genome for less than a \$1000 \cite{genome_cost}, all thanks to recent advances in sequencing technology, as well as accompanying algorithms. In Section \ref{subsec:the process of sequencing and assembly}, we will briefly explain the general pipeline of genome sequencing and assembly, while in Section \ref{subsec:file formats}, we will go through all the file formats used in this thesis for storing data	.
@@ -503,6 +505,7 @@ After Raven is done with the assembly process, it outputs two files: a GFA file 
 We now have a dataset where each edge has a label, as well as a feature in the form of overlap length. The ratio of the non mutated nodes compared to the mutated nodes is on average around 2.5, while the ratio of labels is roughly 40:60, which is fairly balanced and good enough for the task we are trying to solve. That being said, after separation, only one of the haplotypes is well defined, with the other one being highly fragmented and incomplete. This can be seen in Figure \ref{fig:separated graph}. We suspect this is in part happening due to the way Raven assembles contigs, as it isn't optimized for PacBio HiFi data. Looking into this is outside the scope of this thesis, but is worth exploring in more detail in further work. Nevertheless, we can hope of successfully extracting at least one haplotype, which is enough to prove that the problem statement of this thesis is feasible: separating haplotypes is a task that can be effectively solved by employing deep learning. With all that being said, we can now use the dataset we created as input to our model in which we will load it into memory, generate additional features and transform it into a format fit for training.
 
 \chapter{Implementation}
+\label{ch:implementation}
 
 In this chapter, we will go over all the different software components we used for our experiments. First, we will go over the software we used for our deep learning models, as well as all the tools we used to help us in train a model (Section \ref{sec:technology stack}). After that, we will explain the structure of our implementation and how all the different components come together (Section \ref{sec:code structure}).
 
@@ -610,7 +613,7 @@ During training, we used a version od Adam implemented in PyTorch (Section \ref{
 \subsection{Training \& Validation}
 \label{subsec:the training process}
 
-After we generate our dataset of $n$ graphs\footnote{In our case, this was 101 graphs for both the dataset with only one chromosome and the whole genome.}, we use $n - 1$ graphs for training and one for validation. This is done to prevent \textit{overfitting}. During overfitting, as our model trains on the training part of the dataset, it starts to memorize the data in our dataset by heart. This may sound good, but it actually leads to poor \textit{generalization}, i.e., it cannot perform well on other similar data, only on the data it was trained on. To alleviate this, we separate a smaller validation dataset from the main one that the model doesn't train on. By validating our performance on it, we can get a more accurate state of the performance of our model. As the model starts overfitting, performance on the train part of the dataset will continue to improve, while on the validation part, it will start to lower. We can then take the step where the model performed best on the validation dataset as the best version of our model.
+After we generate our dataset of $n$ graphs\footnote{In our case, this was 101 graphs for all datasets: the dataset with only one chromosome, the whole genome dataset, and the datasets with two different chromosomes.}, we use $n - 1$ graphs for training and one for validation. This is done to prevent \textit{overfitting}. During overfitting, as our model trains on the training part of the dataset, it starts to memorize the data in our dataset by heart. This may sound good, but it actually leads to poor \textit{generalization}, i.e., it cannot perform well on other similar data, only on the data it was trained on. To alleviate this, we separate a smaller validation dataset from the main one that the model doesn't train on. By validating our performance on it, we can get a more accurate state of the performance of our model. As the model starts overfitting, performance on the train part of the dataset will continue to improve, while on the validation part, it will start to lower. We can then take the step where the model performed best on the validation dataset as the best version of our model.
 
 Aside from this, validation can also be used for tuning \textit{hyperparameters} of our model, i.e. parameters that aren't adjusted during training, but are set before it. In that case, as some of the information from the validation dataset leaks into the training,  we also need to create a test dataset that will now fulfill the role that validation has fulfilled previously: generalization testing. In this thesis, we don't do this as most of the hyperparameters we used are set to default values and we aren't concerned with state-of-the-art performance as much as testing out if the concept of haplotype separation works with GNNs, as well as what methods work the best.
 
@@ -725,7 +728,7 @@ In addition to accuracy, F1-score and model loss, which we present in Section \r
 \subsection{Accuracy, F1-Score \& Model Loss}
 \label{subsec:accuracy, f1-score and model loss}
 
-In Figure \ref{fig:accuracy, f1 score and loss} we can see the graphs for accuracy (top), F1-score (middle) and model loss (bottom). We group these three graphs together due to them showing similar properties. Accuracy and F1-score exhibit almost the same graphs, while model loss is essentially an inverted version of the accuracy and F1-score graph. They are also grouped together due to them showing a nice example of overfitting. The model reaches its best performance fairly early on during training, around epoch 100, and then continues to progressively exhibit worse and worse performance on the validation dataset. The best version of the model we trained on this dataset had an F1-score of 80.24\%, accuracy of 79.11\% and loss of 0.3868. This is significantly worse than the best performing model on only one chromosome, but is also a reasonable result, showing that different chromosomes exhibit relatively similar features which our model could take advantage of.
+In Figure \ref{fig:accuracy, f1 score and loss} we can see the graphs for accuracy (top), F1-score (middle) and model loss (bottom). We group these three graphs together due to them showing similar properties. Accuracy and F1-score exhibit almost the same graphs, while model loss is essentially an inverted version of the accuracy and F1-score graph. They are also grouped together due to them showing a textbook example of overfitting. The model reaches its best performance fairly early on during training, around epoch 100, and then continues to progressively exhibit worse and worse performance on the validation dataset. The best version of the model we trained on this dataset had an F1-score of 80.24\%, accuracy of 79.11\% and loss of 0.3868. This is significantly worse than the best performing model on only one chromosome, but is also reasonable when taking into account that numerous different chromosomes were used in the dataset, showing that different chromosomes exhibit relatively similar features which our model could take advantage of.
 
 \begin{figure}[h]
 	\centering
@@ -738,14 +741,14 @@ In Figure \ref{fig:accuracy, f1 score and loss} we can see the graphs for accura
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{images/separated_haplotypes_after_training.png}
-	\caption[Separated graph after training]{Example of a graph obtained after training with the haplotypes separated on one chromosome. Orange nodes represent mutated reads, while green nodes represent the original reads. We can see that the green graph in the middle is complete, but somewhat contaminated with orange nodes, while the orange nodes forming a circle around the middle haplotype aren't contaminated with green nodes at all, but are instead highly fragmented. This is further reinforced by the model's recall and precision scores. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
+	\caption[Separated graph after training]{Example of a graph obtained after training on one chromosome, with the haplotypes separated. Orange nodes represent mutated reads, while green nodes represent the original reads. We can see that the green graph in the middle is complete, but somewhat contaminated with orange nodes, while the orange nodes forming a circle around the middle haplotype aren't contaminated with green nodes at all, but are instead highly fragmented. This is further reinforced by the model's recall and precision scores. This graph was obtained using the Graphia\footnotemark{} graphing tool.}
 	\label{fig:separated graph after training}
 \end{figure}
 
 \subsection{Precision \& Recall}
 \label{subsec:precision and recall}
 
-In Figure \ref{fig:precision and recall} we can see the graphs for precision (top) and recall (bottom) for the validation part of the entire genome dataset. An interesting observation we can immediately make is that at the beginning of training, the model has a near perfect recall score with a fairly lower precision score. This means that the model classifies most positive examples in the dataset as indeed positive, while classifying some negative examples incorrectly, i.e. as positive. As training continues, the model starts trading recall for a higher precision value, and this carries on for the entirety of the 500 epochs. The model essentially tries to balance these two metrics as best as it can, with the optimal balance found somewhere around epoch 100. For that balance, recall stands at 93.68\%, while precision is 73.89\%. The dataset is of course not perfectly balanced, and this is somewhat reflected in these numbers, but it is also a testament to the fact that the model is simply better at finding incorrect edges, while simultaneously classifying some correct edges as incorrect. Balancing these parameters depends on the use case for such an application, but we can generalize that the model is quite successful at separating haplotypes with the haplotypes it separates being somewhat incomplete. This can be seen in Figure \ref{fig:separated graph after training}\footnote{Although this graph belongs to a model that trained on only one chromosome, these findings are analogous to a model that trained on the whole genome. This also makes it easier to compare to Figure \ref{fig:separated graph}.}. It is quite similar to Figure \ref{fig:separated graph}, but with some major differences. The large haplotype in the middle in green is somewhat contaminated with orange nodes\footnote{One could say that it was "fuzzy".}, while all the fragmented orange nodes around it don't contain any green nodes. This again confirms our previous recall vs precision findings. Unfortunately, this result is highly dependent on the Raven assembler (Section \ref{subsec:assembling the graph}) properly outputting reads and there isn't much we can do about it as it is outside the scope of this thesis. Looking into how our haplotype separation process could be incorporated into sequencing and assembly could prove as a worthwhile endeavor to further improve results and streamline the whole process.
+In Figure \ref{fig:precision and recall} we can see the graphs for precision (top) and recall (bottom) for the validation part of the entire genome dataset. An interesting observation we can immediately make is that at the beginning of training, the model has a near perfect recall score with a fairly lower precision score. This means that the model classifies most positive examples in the dataset as indeed positive, while classifying some negative examples incorrectly, i.e. also as positive. As training continues, the model starts trading recall for a higher precision value, and this carries on for the entirety of the 500 epochs, which is how long we trained the network. The model essentially tries to balance these two metrics as best as it can, with the optimal balance found somewhere around epoch 100. For that balance, recall stands at 93.68\%, while precision is 73.89\%. The dataset is of course not perfectly balanced, and this is somewhat reflected in these numbers, but it is also a testament to the fact that the model is simply better at finding incorrect edges, while simultaneously classifying some correct edges as incorrect. Balancing these parameters depends on the use case for such an application, but we can generalize that the model is quite successful at separating haplotypes with the haplotypes it separates being somewhat incomplete. This can be seen in Figure \ref{fig:separated graph after training}\footnote{Although this graph belongs to a model that trained on only one chromosome, these findings are analogous to a model that trained on the whole genome. This also makes it easier to compare to Figure \ref{fig:separated graph}.}. It is quite similar to Figure \ref{fig:separated graph}, but with some major differences. The large haplotype in the middle in green is somewhat contaminated with orange nodes\footnote{One could say that it was "fuzzy".}, while all the fragmented orange nodes around it don't contain any green nodes. This again confirms our previous recall vs precision findings. Unfortunately, this result is highly dependent on the Raven assembler (Section \ref{subsec:assembling the graph}) properly outputting reads and there isn't much we can do about it as it is outside the scope of this thesis. Looking into how our haplotype separation process could be incorporated into sequencing and assembly could prove as a worthwhile endeavor to further improve results and streamline the whole process.
 
 \begin{figure}
 	\centering
@@ -759,7 +762,7 @@ In Figure \ref{fig:precision and recall} we can see the graphs for precision (to
 \section{Experiments on Different Chromosomes}
 \label{sec:experiments on different chromosomes}
 
-To better test the claim that chromosomes share information, we ran experiments in which we trained our model on one chromosome of yeast, and validated it on another. Specifically, we performed two experiments. In the first one, we trained on chromosome one, and validated on chromosome two, and in the second one, we trained on chromosome three and validated on chromosome two. We are aware that this is highly specific data and that the results may be completely different for other chromosomes, but running tests on all chromosome combinations is extremely time consuming and outside the scope of this thesis. Nevertheless, it is an interesting topic of further research that is worth experimenting on.
+To better test the claim that chromosomes share information, we ran experiments in which we trained our model on one chromosome of yeast, and validated it on another. Specifically, we performed two experiments. In the first one, we trained on chromosome one of yeast, and validated on chromosome two, and in the second one, we trained on chromosome three of yeast and validated on chromosome two. We are aware that this is highly specific data and that the results may be completely different for other chromosomes, but running tests on all chromosome combinations is extremely time consuming and outside the scope of this thesis. Nevertheless, it is an interesting topic of further research that is worth experimenting on.
 
 \begin{figure}[h]
 	\centering
@@ -772,28 +775,29 @@ To better test the claim that chromosomes share information, we ran experiments 
 \subsection{Accuracy, F1-Score \& Model Loss}
 \label{subsec:accuracy, f1-score and model loss chr}
 
-We again start with the accuracy, F1-score and model loss graphs. In Figure \ref{fig:accuracy, f1 score and loss chr}, we can see two different models. The model in orange represents a model that was trained on the first chromosome of yeast, and validated on the second. By performing the experiment this way, we essentially "test" the knowledge we obtained on one chromosome of yeast on a never before seen different chromosome. We can see that the obtained results are quite good, although still weaker than the best model trained on one chromosome. Wa can also observe two interesting findings. Firstly, the models overfit much faster than in other experiments, which makes sense as they are validated on somewhat different data, while in the previous experiments, they were evaluated on the same data. Secondly, the graphs appear to be much more "jagged" in comparison to the other graphs. This might also be due to more noise in the validation dataset due to it being a different chromosome compared to the training dataset.
+We again start with the accuracy, F1-score and model loss graphs. In Figure \ref{fig:accuracy, f1 score and loss chr}, we can see two different models. The model in orange represents a model that was trained on the first chromosome of yeast, and validated on the second. By performing the experiment this way, we essentially "test" the knowledge we obtained on one chromosome of yeast on a never before seen different chromosome. We can see that the obtained results are quite good, although still weaker than the best model trained on one chromosome. Wa can also observe two interesting findings. Firstly, the models overfit much faster than in other experiments, which makes sense as they are validated on somewhat different data, while in the previous experiments, they were evaluated on the same data. Secondly, the graphs appear to be much more "jagged" in comparison to the other graphs. This might be due to more noise in the validation dataset, as it is made from a different chromosome compared to the training dataset.
 
-The blue graph, representing training on chromosome three and validation on chromosome two, appears to be much the same as the orange model, albeit having somewhat better performance. This shows that different chromosomes exhibit different levels of information similarity, but validating this claim would require extensive testing and experimentation. For now, this is proof enough of our claims.
+The blue graph, representing training on chromosome three and validation on chromosome two, appears to be much the same as the orange model, albeit having somewhat better performance. This shows that different chromosomes exhibit different levels of information similarity, but validating this claim would require extensive testing and experimentation. For now, this is will have to do as proof for our claims.
 
 \subsection{Precision \& Recall}
 \label{subsec:precision and recall chr}
 
-The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. Similarly to the previous experiments, in the beginning, the model trades recall for precision to optimize performance, with recall again being significantly higher than precision, meaning that the way the model separates the haplotypes is till the same. The difference is that here, both metrics start falling off rather early on during training and never recover, a result of overfitting. The blue model again exhibits better performance, in accordance with the previous results. Interestingly enough, their recall metrics are quite similar and near perfect at their maximum, with a difference in performance being only noticeable in precision. This leads us to believe that most models in most use cases near perfectly select positive nodes, i.e. the mothers haplotype, while struggling more or less with how many negative examples they classified as positive. This is a useful starting point for further research, as it means that the biggest gain in performance may come from improving the recall metric of the model. We believe that most of this comes from the way the Raven assembler creates reads, already discussed in other chapters, which we will further discuss in the conclusion.	
+The precision and recall graphs are depicted in Figure \ref{fig:precision and recall chr}. Similarly to the previous experiments, in the beginning, the model trades recall for precision to optimize performance, with recall again being significantly higher than precision, meaning that the way the model separates the haplotypes is still the same. The difference is that here, both metrics start falling off rather early on during training and never recover, a result of overfitting. The blue model again exhibits better performance, in accordance with the previous results. Interestingly enough, their recall metrics are quite similar and near perfect at their maximum, with a difference in performance being only noticeable in precision. This leads us to believe that most models in most use cases near perfectly select positive nodes, e.g. the mother's haplotype, while struggling more or less with how many negative examples they classified as positive. This is a useful starting point for further research, as it means that the biggest gain in performance may come from improving the recall metric of the model. We believe that most of this comes from the way the Raven assembler creates reads, already discussed in other chapters, which we will further discuss in the conclusion.	
 
 \chapter{Conclusion}
+\label{ch:conclusion}
 
-Bioinformatics is an important field of scientific inquiry with many different real-world applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. Parameters such as graph size and mutation frequency are an important topic that has barely been touched upon here, but can greatly influence the performance of the model. These parameters should be optimized based on the use case and should simulate real-world data.
+Bioinformatics is an important field of scientific inquiry with many different real-world applications and wide reaching effects. With the recent rise in deep learning, there remains a large gap in bioinformatics research to be filled, with numerous algorithms waiting to be improved with more state-of-the art methods from the field of deep learning, and to an extent, machine learning. In this regard, we here employ deep learning algorithms, specifically, Graph Neural Networks, to improve the process of haplotype separation. We test out numerous methods in order to find the best performing ones, and then perform further experiments with it on different datasets. The obtained results prove that, even without meticulous parameter optimization and while using mostly basic features, we can successfully separate haplotypes using Graph Neural Networks. However, numerous problems still present themselves, and new ones have also come up. Maybe the biggest issue faced here is the long and tedious pipeline of generating appropriate training data that heavily depends on the software used. We admittedly got lucky, and generated "good enough" data after only a few tries, but this setup is still far from optimal and more in-depth dataset analysis should be performed in future work. For instance, parameters such as graph size and mutation frequency are an important topic for dataset performance that has barely been touched upon here, but can greatly influence the results of the model. These parameters should be optimized based on the use case and should simulate real-world data.
 
-One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, during training, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts of the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, as much as of the Raven assembler used for assembling reads. We used Pacific Biosciences hi-fi data for our experiments due to its high precision, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as can be seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough to give us valuable insights into the topic.
+One consistent issue we faced with the simulated data was the fact that only one haplotype was successfully separated, with the other one being highly fragmented. In essence, during training, our model didn't separate the haplotypes as much as "cleaning" one haplotype by removing parts of the other haplotype from it, as seen in Figure \ref{fig:separated graph after training}. However, this problem wasn't the fault of our model, as much as of the Raven assembler used for assembling reads. We used Pacific Biosciences HiFi data for our experiments due to its high accuracy, but the Raven assembler wasn't optimized for it. Due to this, even before training our models, the haplotypes were suboptimally separated, as can be seen in Figure \ref{fig:separated graph}. Nevertheless, this data was good enough for giving us valuable insights into the topic.
 
-Aside from this, it has to be said that in this thesis, only simulated data was used. For a better picture of real-world performance, original PacBio HiFi reads from the yeast genome need to be used, which unfortunately weren't available for this thesis. Nevertheless, simulated data can also be a good indicator of performance, as well as useful baseline.
+Aside from this, it has to be said that in this thesis, only simulated data was used. For a better picture of real-world performance, original PacBio HiFi reads from the yeast genome need to be used, which unfortunately weren't available for this thesis. Nevertheless, simulated data can also be a good indicator of performance, as well as a useful baseline.
 
 \section{Future Work}
 
-There are numerous other ways to improve on this work. Probably the most fruitful path would be to try to integrate the assembly process with the simulation of data, as well as with subsequent haplotype separation in an \textit{end-to-end} system. Such a system could reward complete haplotype reconstruction and penalize fragmented separation. By fixing the assembly process, we could also obtain some additional edge features, such as overlap quality data, which could prove useful, as the largest bump in performance was seen from the addition of edge features into the attention mechanism. Aside from this, this could potentially also solve the precision/recall discrepancy in our models, as they mostly favored one over the other, something we attributed to the imperfect way the haplotypes were generated. By creating a system that could separate haplotypes in a complete and accurate way, new pathways would open up for optimization and performance tuning to better apply the method to real-world applications, of which there are many.
+There are numerous other ways to improve on this work. Probably the most fruitful path would be to try to integrate the assembly process with the simulation of data, as well as with subsequent haplotype separation in an \textit{end-to-end} system. Such a system could be created in a way that would reward complete haplotype reconstruction, while penalizeing their fragmented separation. By fixing the assembly process, we could also obtain some additional edge features, such as overlap quality data, which could prove useful, as the largest bump in performance was seen from the addition of edge features into the attention mechanism. Aside from this, this could potentially also solve the precision/recall discrepancy in our models, as the models mostly favored one over the other, something we attributed to the imperfect way the haplotypes were generated. By creating a system that could separate haplotypes in a complete and accurate way, new pathways would open up for optimization and performance tuning to better apply the method to real-world applications, of which there are many.
 
-Something we also touched upon was an analysis of chromosome similarity. As haplotype separation could be performed on both individual chromosomes and on the whole genome, it would be useful to determine which method performed better. This would be very time consuming, but could eventually prove decisive. Also, a general hyperparameter tuning setup, although also time consuming, would be needed for final real-world usage. And finally, the method used in this thesis was based on Graph Neural Networks, an extremely new, fast moving, and exciting subfield of deep learning. With new methods and optimizations being pioneered every day, keeping up with the field and using the newest and most cutting edge methods is necessary for getting the most out of data and further advancing the field of bioinformatics.
+Something we also touched upon was an analysis of chromosome similarity. As haplotype separation could be performed on both an individual chromosome level, as well as on the whole genome level, it would be useful to determine which method performed better. This would be very time consuming, but could eventually prove decisive for finding the optimal setup. Also, a general hyperparameter tuning setup, although also time consuming, would be needed for final real-world usage. And finally, the method used in this thesis was based on Graph Neural Networks, an extremely new, fast moving, and exciting subfield of deep learning. With new methods and optimizations being pioneered every day, keeping up with the field and using the newest and most cutting edge methods is necessary for getting the most out of data and further advancing the field of bioinformatics.
 
 \bibliography{literatura}
 \bibliographystyle{abbrv}
@@ -803,7 +807,7 @@ Something we also touched upon was an analysis of chromosome similarity. As hapl
 \title{Using Graph Neural Networks to Separate Haplotypes in Assembly Graphs}
 \begin{abstract}
 	
-Haplotype separation is an important task in bioinformatics with numerous real-world applications. Traditionally, heuristics and hand-crafted algorithms were used for solving this task. With the recent rise in deep learning algorithms, specifically, Graph Neural Networks, there remains a large gap in research to be filled with algorithm improvement. We employ Graph Neural Networks for haplotype separation on yeast data and our results on synthetic data are a success, proving the merit of this method. The best model, the Edge Graph Attention Network model, had an F1-score of 85.13\%, with one haplotype being almost perfectly separated, and problems arising only on the second one due to high fragmentation. It employed the attention mechanism on both node and edge features to leverage all data available in a graph. However, many issues arise that remain to be solved, the main one being the faulty haplotype data generation process. Nevertheless, this work opens up numerous alleyways of further research into the topic and offers a useful baseline.
+Haplotype separation is an important task in bioinformatics with numerous real-world applications. Traditionally, heuristics and hand-crafted algorithms were used for solving it. With the recent rise in deep learning algorithms, specifically, Graph Neural Networks, there remains a large gap in research to be filled with algorithm improvement. We employ Graph Neural Networks for haplotype separation on yeast data and our results on synthetic data are a success, proving the merit of the method. The best model, the Edge Graph Attention Network model, had an F1-score of 85.13\%, with one haplotype being almost perfectly separated, and problems arising only on the second one due to high fragmentation. It employed the attention mechanism on both node and edge features to leverage all data available in a graph. However, many issues arise that remain to be solved, the main one being the faulty haplotype data generation process. Nevertheless, this work opens up numerous alleyways of further research into the topic and offers a useful baseline.
 
 \keywords{Bioinformatics, Graph Neural Networks, GNN, Haplotype Separation, Deep Learning, Machine Learning}
 \end{abstract}
@@ -811,7 +815,7 @@ Haplotype separation is an important task in bioinformatics with numerous real-w
 \hrtitle{Korištenje graf neuronskih mreža za odvajanje haplotipa u grafovima astavljanja}
 \begin{sazetak}
 	
-Razdvajanje haplotipa je bitan zadatak u bioinformatici sa raznim primjenama u stvarnom svijetu. Tradicionalno, za rješavanje ovoga zadatka su korištene heuristike i ručno rađeni algoritmi. Sa nedavnim usponom algoritama dubokog učenja, specifično Graf Neuronskih Mreža, ostaje velika rupa u sitraživanju koju treba ispuniti poboljšanjem algoritama. Primjenjujemo Graf Neuronske Mreže za razdvajanje haplotipa na podatcima kvasca i naši rezultati na sintetičkim podacima su uspješni, time dokazujući snagu ove metode. Najbolji model, Graf Neuronska Mreža s Pažnjom na Bridovima je imala F1 vrijendost od 85.13\%, pri ćemu je jedan haplotip bio gotovo savršeno odvojen, a problemi su se javljali samo kod drugoga zbog visoke razdvojenosti. Model je koristio mehanizam pažnje na značajkama i čvorova i bridova da bi iskoristio sve dostupne podatke u grafu. Na žalost, mnogo problema i dalje nije riješeno, gdje je najveći problem neispravni proces stvaranja podataka haplotipa. Ipak, ovaj rad otvara znatne puteve istraživanja za ovu temu i daje korisnu bazu.
+Razdvajanje haplotipa je bitan zadatak u bioinformatici sa raznim primjenama u stvarnom svijetu. Tradicionalno, za rješavanje ovoga zadatka su korištene razne heuristike i ručno rađeni algoritmi. Sa nedavnim usponom algoritama dubokog učenja, specifično, Graf Neuronskih Mreža, ostaje velika praznina u sitraživanju koju treba ispuniti poboljšanjem algoritama. Primjenjujemo Graf Neuronske Mreže za razdvajanje haplotipa na podatcima kvasca i naši rezultati na sintetičkim podacima su uspješni, time dokazujući snagu ove metode. Najbolji model, Graf Neuronska Mreža s Pažnjom na Bridovima je imala F1-vrijendost od 85.13\%, pri ćemu je jedan haplotip bio gotovo savršeno odvojen, a problemi su se javljali samo kod drugoga zbog visoke fragmentacije. Model je koristio mehanizam pažnje na značajkama i čvorova i bridova da bi iskoristio sve dostupne podatke u grafu. Na žalost, mnogo problema i dalje nije riješeno, gdje je najveći problem neispravni proces stvaranja podataka haplotipa. Ipak, ovaj rad otvara razne puteve istraživanja za ovu temu i daje korisnu bazu.
 
 \kljucnerijeci{Bioinformatika, Graf Neuronske Mreže, GNN, Odvajanje haplotipa, Duboko Učenje, Strojno Učenje}
 \end{sazetak}
